# hangman

./: CMakeLists.txt  README.md  hangman.cpp
figure/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
